--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ after_script:
   - git config --local "url.git@github.com:.insteadOf" "https://github.com/"
   # Create and push git tag
   - >
-    RELEASE_TAG="nightly-$(go version | awk '{print $3}')-$(cd src/github.com/mholt/caddy/caddy && git rev-parse --short=12 HEAD)" &&
+    RELEASE_TAG="weekly-$(go version | awk '{print $3}')-$(cd src/github.com/mholt/caddy/caddy && git rev-parse --short=12 HEAD)" &&
     git tag -- "$RELEASE_TAG" && git push -- origin "refs/tags/$RELEASE_TAG"
   # Remove key from agent and kill it
   - ssh-add -D; kill -- "$SSH_AGENT_PID"
